# create-fastapi-app

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  pyrightconfig.json
app/: logic.py  ui.py
app/template/: .dockerignore.enable_docker  .env.example.jinja  .env.jinja  .pre-commit-config.yaml  Dockerfile.jinja  README.md.jinja  conftest.py  copier.yml  docker-compose.yml.jinja  pm2.config.js.jinja  pyproject.toml.jinja  pyrightconfig.json  pytest.ini
app/template/.github/actions/setup-python-uv/: action.yml
app/template/.github/workflows/: ci-cd.yml.jinja  docker.yml
app/template/alembic/: env.py  env.py.jinja
app/template/app/: database.py  main.py.jinja
app/template/app/database/: session.py
app/template/app/dtos/: auth.py  auth.py.opt  health.py  root.py
app/template/app/dtos/utils/: utils.py
app/template/app/middlewares/: cors.py  docshield.py  logging.py  rate_limiter.py  request_id.py
app/template/app/models/: auth.py  auth.py.jinja
app/template/app/models/utils/: utils.py.jinja
app/template/app/routers/: auth.py  health.py  root.py  routes.py.jinja
app/template/app/routers/utils/: __init__.py  auth.py.jinja
app/template/app/services/: __init__.py.jinja  auth.py  email.py.jinja  health.py  scheduler.py  scheduler.py.enable_auth
app/template/app/services/utils/: error.py  utils.py
app/template/app/utils/: dependencies.py.jinja  logger.py.jinja  settings.py.jinja  utils.py
app/template/scripts/: context.py  context.sh  create_db.sh  drop_db.sh  migrate_db.sh  reset_db.sh  start_server.sh  test.sh  utils.sh
app/template/scripts/db/: create.py  drop.py
app/template/scripts/utils/: utils.py
app/template/test/: test_auth.py  test_auth.py.enable_auth  test_health.py
app/template/test/utils/: routes.py  routes.py.jinja  utils.py.jinja
cli/: pyproject.toml
cli/app/: logic.py  main.py  ui.py
template/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
template/.github/workflows/: ci.yml
template/alembic/: env.py
template/app/: main.py
template/app/database/: session.py
template/app/dtos/: root.py
template/app/routers/: health.py  root.py  routes.py
template/app/utils/: logger.py  settings.py
template/scripts/: create_migration.py  create_migration.sh  dev.sh  migrate.sh  reset_db.sh  setup_db.py  setup_db.sh  start_server.sh  test.sh  utils.sh
template/scripts/db/: drop.py  setup.py
template/scripts/db/utils/: utils.py
template/test/: test_api.py
