[project]
name = "create-fastapi-app"
version = "0.1.0"
description = "CLI for create-fastapi-app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.0", "questionary>=2.0.1", "copier>=9.4.1"]

[project.scripts]
create-fastapi-app = "app.main:main"

[tool.uv]
package = true

[tool.ruff]
exclude = [".venv/", "app/template/"]

[tool.pyright]
typeCheckingMode = "standard"
exclude = [".venv/", "app/template/"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
app = ["template/**/*", "template/**/.*"]

[dependency-groups]
dev = ["pre-commit>=4.4.0", "pyright>=1.1.407"]
