[project]
name = "create-fastapi-app"
version = "0.1.0"
description = "CLI for create-fastapi-app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "pre-commit>=4.4.0",
]

[project.scripts]
create-fastapi-app = "app.main:main"

[tool.uv]
package = true
